# Simple-scalar-based-automatic-gradient-engine

./: CMakeLists.txt  README.md  bnr.sh
experiments/: exp1.cpp  exp2.cpp
lib/: fun.h  fun.hpp  vec.h  vec.hpp
